syntax = "proto3";

package pb;
option go_package = ".;pb";


message Move {
    Square from = 1;
    Square to = 2;
}

message Game {
    uint32 ID = 1;
    User playerOne = 2;
    User playerTwo = 3;
    Board board = 4;
}

message Board {
    repeated Square squares = 1;
}

message Square {
    SquarePosition pos = 1;
    Color color = 2;    
    Piece piece = 3;
}

message SquarePosition {
    uint32 x = 1;
    uint32 y = 2;    
}

enum Color {
    white = 0;
    black = 1;
}

enum Piece {
    pieceNil = 0;
    wPawn = 1;
    bPawn = 2;
    wRook = 3;
    bRook = 4;
    wKnight = 5;
    bKnight = 6;
    wBishop = 7;
    bBishop = 8;
    wKing = 9;
    bKing = 10;
    wQueen = 11;
    bQueen = 12;
}

message User {
    string ID = 1;
    string name = 2;
    string email = 3;
}

message PingRequest {
}

message PingResponse {
    string response = 1;
}

message MakeMoveRequest {
    Game game = 1;
    Move move = 2;
}

message MakeMoveResponse {
    Game game = 1;
}

message NewGameRequest {
    string body = 1;
}

message NewGameResponse {
    Game game = 1;
}

message SignInRequest {
    string code = 1;
}

message SignInResponse {
    User user = 1;
}



service ChessApi {
    rpc MakeMove(MakeMoveRequest) returns (MakeMoveResponse) {};
    rpc NewGame(NewGameRequest) returns (NewGameResponse) {};
    rpc Ping(PingRequest) returns (PingResponse) {};
    rpc SignIn(SignInRequest) returns (SignInResponse) {};
}
